[tool.poetry]
name = "github-stats"
version = "0.1.0"
description = ""
authors = ["Gal Dayan <galdayan1895@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
streamlit = "^1.42.2"
dotenv = "^0.9.9"
matplotlib = "^3.10.1"
pandas = "^2.2.3"
altair = "^5.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
